--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.2.4",
     "swagger-ui-express": "^4.5.0",
+    "ts-jest": "^28.0.7",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
-    "ts-jest": "^28.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
