--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+# App
 FORGOT_MAIL_URL=http://localhost:3333/passwords/reset?token=
+
+# AWS
+AWS_ACCESS_KEY_ID=AKIAYPAMYCPMOR23WDIN
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME=api-rentx-s3-bucket
