--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1199.0",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "dayjs": "^1.11.4",
