--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # App
 FORGOT_MAIL_URL=http://localhost:3333/passwords/reset?token=
+APP_API_URL=http://localhost:3333
 DISK=local | s3
 
 # AWS
@@ -7,3 +8,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
+AWS_BUCKET_URL=
