--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # App
 FORGOT_MAIL_URL=http://localhost:3333/passwords/reset?token=
 APP_API_URL=http://localhost:3333
-DISK=local | s3
+DISK=s3 | local
+MAIL_PROVIDER=ses | ethereal
 
 # AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
 AWS_BUCKET_NAME=
-AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
