--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/app/rentx
+            yarn 
             yarn typeorm -d ./src/shared/infra/typeorm/index.ts migration:run
             pm2 restart rentx_app            
