feat: configurando rate limiter

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ APP_API_URL=http://localhost:3333
 DISK=s3 | local
 MAIL_PROVIDER=ses | ethereal
 
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
 # AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
