--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   database:
     image: postgres
     container_name: database
-    # restart: always
+    restart: always
     ports:
       - 5432:5432
     environment:
@@ -13,17 +13,24 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    ports: 
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - database
-    depends_on: 
-      - database
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - 6379:6379
+
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports: 
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database
+  #   depends_on: 
+  #     - database
 
 volumes:
   pgdata:
