--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
   },
   "dependencies": {
+    "@sentry/node": "^7.11.1",
+    "@sentry/tracing": "^7.11.1",
     "aws-sdk": "^2.1199.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
